_sass/minimal-mistakes/skins/_smll.scss
/* ==========================================================================
   MAYSL Dark skin
   ========================================================================== */

/* Colors */
/* MAYSL */
/*
$background-color: #1e252a !default;
$text-color: #e0e0e0 !default;
$primary-color: #008f00 !default; // grass green
$border-color: mix($primary-color, $background-color, 75%) !default;
$code-background-color: mix(#000, $background-color, 15%) !default;
$code-background-color-dark: mix(#000, $background-color, 20%) !default;
$form-background-color: mix(#000, $background-color, 15%) !default;
$footer-background-color: mix(#000, $background-color, 30%) !default;
$link-color: mix($primary-color, #fff, 50%) !default;
$link-color-hover: mix(#fff, $link-color, 25%) !default;
$link-color-visited: mix(#000, $link-color, 25%) !default;
$masthead-link-color: $text-color !default;
$masthead-link-color-hover: mix(#000, $text-color, 20%) !default;
$navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
*/

/* fonts */
/* $main-font: "Robot Slab"; */
$main-font: "Mulish";
/* $hero-font: "DM Serif Text"; */
/* $hero-font: "Volkhov"; */
$hero-font: "DM Serif Text";
/* $sans-serif: $main-font, -apple-system, BlinkMacSystemFont, "Segoe UI",
  "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
*/
$sans-serif: proxima-nova, Corbel, "Helvetica Neue", Helvetica, Arial, sans-serif;

$background-color: #eeeeee !default;
$text-color: #000 !default;
$muted-text-color: $text-color !default;
$primary-color: #ff0000 !default; /* red */
/* $footer-background-color: #000 !default; */
$footer-background-color: #3939BF !default;
$link-color: #0000ff !default;
$masthead-link-color: $footer-background-color !default;
$masthead-link-color-hover: $text-color !default;
$navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
$border-color: mix(#fff, $footer-background-color, 75%) !default;
/* .toc .nav__title { color: #fff; font-size: 0.75em; background: #ff0000; border-top-left-radius: 4px; border-top-right-radius: 4px; } */

/* contrast syntax highlighting (base16) */
$base00: #000000 !default;
$base01: #242422 !default;
$base02: #484844 !default;
$base03: #6c6c66 !default;
$base04: #918f88 !default;
$base05: #b5b3aa !default;
$base06: #d9d7cc !default;
$base07: #fdfbee !default;
$base08: #ff6c60 !default;
$base09: #e9c062 !default;
$base0a: #ffffb6 !default;
$base0b: #a8ff60 !default;
$base0c: #c6c5fe !default;
$base0d: #96cbfe !default;
$base0e: #ff73fd !default;
$base0f: #b18a3d !default;

$ll-baseball-color: #019cde;
$ll-softball-color: #ff6900;
.page__content .baseball h2 {
    background-color: $ll-baseball-color;
}
.page__content .softball h2 {
    background-color: $ll-softball-color;
}

/* table of contents */
/* SMLL color: #40A4FF */
/* light blue */
$toc-active-color: mix(#40A4FF, $background-color, 50%) !default;
.toc li.active a { background-color: #ffffff; }
.toc ul.toc__menu { background-color: $toc-active-color; }

/* notices */
p.notice--info { background-color: mix($background-color, $toc-active-color, 66%); }

.page__title {
    color: $footer-background-color;
    /* font-variant: small-caps; */
    text-decoration: underline;
    text-decoration-color: $primary-color;
    text-decoration-style: single;
    text-decoration-skip-ink: none;
    text-decoration-thickness: 0.12em;
    text-underline-offset: 0.2em;
}

.page__content {
  .notice,
  .notice--primary,
  .notice--info,
  .notice--warning,
  .notice--success,
  .notice--danger {
    color: $text-color;
  }
}
.page__content section {
    font-weight: lighter;
}

.page * table,
.archive table {
    border-radius: 4px;
}

.page * thead,
.archive thead {
    background-color: $toc-active-color;
    border-bottom: 2px solid $primary-color;
    border-top: 1px solid $toc-active-color;
    border-left: 1px solid $toc-active-color;
    border-right: 1px solid $toc-active-color;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}

.page * thead,
.archive thead,
.page * tbody,
.archive tbody {
    /* box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125) */
    border-top: 1px solid $link-color;
    border-left: 1px solid $link-color;
    border-right: 1px solid $link-color;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}

.page * tbody,
.archive tbody {
    border-bottom: 1px solid $link-color;
}

/*
.page__inner-wrap::after {
    content: "<img src=\"/assets/images/ll-program-logo.png\">";
}
*/

.page__footer {
  color: #fff !important; // override
}

.page__footer-follow .social-icons i,
.page__footer-follow .social-icons .svg-inline--fa {
  color: inherit;
}

/* MAYSL */
.author__urls.social-icons i,
.author__urls.social-icons .svg-inline--fa,
.page__footer-follow .social-icons i,
.page__footer-follow .social-icons .svg-inline--fa {
  color: inherit;
}

.page__footer img.logo {
  max-width: 100px;
  align: right;
}

.page__hero--overlay h1 {
  font-family: $hero-font, $main-font, sans-serif;
  text-transform: uppercase;
}

/*
.ais-search-box .ais-search-box--input {
  background-color: $form-background-color;
}
*/

/* external links in masthead navbar */
.greedy-nav a[href^="https"]::after {
    font-family: "Font Awesome 5 Free"; 
    font-weight: 900;
    font-size: xx-small;
    content: "\00a0\f35d";
    vertical-align: super;
}

/* external links in nav sidebar */
.nav__list a[href^="https"] ::after {
    font-family: "Font Awesome 5 Free"; 
    font-weight: 900;
    font-size: xx-small;
    content: "\00a0\f35d";
    vertical-align: super;
}

.nav__footer img {
    padding-top: 4em;
    vertical-align: bottom;
    max-width: 66%;
}

/* external links in pages */
.page a[href^="https"]:not(.nav__list a):not(.greedy-nav a):not(.social-icons a):not(:has(img))::after {
    font-family: "Font Awesome 5 Free"; 
    font-weight: 900;
    font-size: xx-small;
    content: "\00a0\f35d";
    vertical-align: super;
}

/* jekyll image gallery */
div.gallery {
    background-color: #fff;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
    padding-left: 1em;
    padding-right: 1em;
    border-radius: 4px;
    border-color: $border-color;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125)
}

.gallery figure {
	align-content: space-around;
	align-items: center;
	justify-self: center;
}


.gimme-space {
    padding-top: 1em;
    padding-bottom: 1em;
}

.full-width {
    width: 100%;
}

.half-width {
    width: 50%;
}

.third-width {
    width: 33%;
}

.quarter-width {
    width: 25%;
}

.masthead a {
    font-weight: bold;
}

.greedy-nav a.site-title {
    font-family: "IM Fell Great Primer SC";
    font-weight: bold;
}

